Most of the basics in place.  Working on content now

--- a/content/sample/content.html
+++ b/content/sample/content.html
@@ -1,4 +1,4 @@
-<section class="rightpaneitem">
+<section>
 
   <!-- Need to add form elements and apply styles:
     http://coding.smashingmagazine.com/2007/05/10/70-expert-ideas-for-better-css-coding/
