Updated website to pass WAI-standards

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <title>Casey McLaughlin: Personal Website</title>
 
         <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Arimo" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
 
@@ -48,28 +47,28 @@
             <hr />
 
             <p class="action-links">
-                <a href="https://twitter.com/caseyamcl" rel="author">
-                    <i class="fa fa-twitter" aria-hidden="true" title="Twitter"></i>
+                <a href="https://twitter.com/caseyamcl" rel="author" title="Find me on Twitter">
+                    <img src="twitter.png" class="icon icon-twitter" alt="Twitter logo" />
                     <span class="sr-only">Twitter</span>
                 </a>
 
                 <a href="https://www.linkedin.com/in/caseyamcl/" rel="author">
-                    <i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
+                    <img src="linkedin.png" class="icon icon-linkedin" alt="LinkedIn logo" />
                     <span class="sr-only">LinkedIn</span>
                 </a>
 
                 <a href="https://github.com/caseyamcl/" rel="author">
-                    <i class="fa fa-github" aria-hidden="true" title="GitHub"></i>
+                    <img src="github.png" class="icon icon-github" alt="GitHub logo" />
                     <span class="sr-only">GitHub</span>
                 </a>
 
                 <a href="https://rcc.fsu.edu/staff/casey-mclaughlin" rel="author">
-                    <img class="fsu-logo" src="fsu-seal.png" style="height: 0.9em; vertical-align: middle; padding-bottom: 8px;" title="Florida State University Research Computing Center" />
+                    <img class="icon icon-fsu-logo" src="fsu-seal.png" title="Florida State University Research Computing Center" alt="Florida State University Seal" />
                     <span class="sr-only">Florida State University Research Computing Center</span>
                 </a>
 
                 <a href="mailto:caseyamcl@gmail.com" rel="author">
-                    <i class="fa fa-envelope" aria-hidden="true" title="Florida State University Research Computing Center"></i>
+                    <img src="email.png" class="icon icon-mail" alt="Envelope icon" />
                     <span class="sr-only">Email Me</span>
                 </a>
             </p>
